--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,13 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: hidden;
+}
 
 .property-option {
   background-color: #d7e3ff5e;
